remove most instances of Stream